--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -1,25 +1,21 @@
 <header>
   <div class="navbar-inverse navbar-static-top ku-topbar" role="navigation">
     <div class="container">
-      <!-- <a class="topbar-logo pull-left" href="/">
-          <img class="img-responsive" src="../../images/ku_topbar_dk.svg" alt="Københavns universitet">
-      </a> -->
-      <!-- Toggle left menu button -->
-
+      <a class="topbar-logo pull-left" href="/">
+          <!-- <img class="img-responsive" src="../../images/ku_topbar_dk.svg" alt="Københavns universitet"> -->
+      </a>
         <a id="btn_left" href="#mobileleftmenu" class="navbar-toggle leftmenu-toggle" role="button">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="sr-only">Toggle navigation</span>
         </a>
-
         <a id="btn_right" href="#navbar" class="navbar-toggle collapsed globalmenu-toggle" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar top-bar"></span>
           <span class="icon-bar middle-bar"></span>
           <span class="icon-bar bottom-bar"></span>
       </a>
-
       <div id="topbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Kalender</a></li>
@@ -28,7 +24,7 @@
           <li><a href="#">Job</a></li>
           <li><a href="#">A-Å-index</a></li>
           <li><a href="#">KUnet</a></li>
-          <li class="eng"><a href="#">English</a></li>
+          <li><a class="eng" href="#">English <img src="../../images/gb.svg" alt="" /></a></li>
         </ul>
       </div>
     </div>
