--- a/less/panels.less
+++ b/less/panels.less
@@ -8,8 +8,7 @@
   margin-bottom: @line-height-computed;
   background-color: @panel-bg;
   border: 1px solid transparent;
-  border-radius: @panel-border-radius;
-  .box-shadow(0 1px 1px rgba(0,0,0,.05));
+  //border-radius: @panel-border-radius;
 }
 
 // Panel contents
@@ -22,7 +21,7 @@
 .panel-heading {
   padding: @panel-heading-padding;
   border-bottom: 1px solid transparent;
-  .border-top-radius((@panel-border-radius - 1));
+  //.border-top-radius((@panel-border-radius - 1));
 
   > .dropdown .dropdown-toggle {
     color: inherit;
@@ -50,7 +49,7 @@
   padding: @panel-footer-padding;
   background-color: @panel-footer-bg;
   border-top: 1px solid @panel-inner-border;
-  .border-bottom-radius((@panel-border-radius - 1));
+  //.border-bottom-radius((@panel-border-radius - 1));
 }
 
 
@@ -66,14 +65,14 @@
 
     .list-group-item {
       border-width: 1px 0;
-      border-radius: 0;
+      //border-radius: 0;
     }
 
     // Add border top radius for first one
     &:first-child {
       .list-group-item:first-child {
         border-top: 0;
-        .border-top-radius((@panel-border-radius - 1));
+        //.border-top-radius((@panel-border-radius - 1));
       }
     }
 
@@ -81,7 +80,7 @@
     &:last-child {
       .list-group-item:last-child {
         border-bottom: 0;
-        .border-bottom-radius((@panel-border-radius - 1));
+        //.border-bottom-radius((@panel-border-radius - 1));
       }
     }
   }
@@ -118,49 +117,49 @@
     }
   }
   // Add border top radius for first one
-  > .table:first-child,
-  > .table-responsive:first-child > .table:first-child {
-    .border-top-radius((@panel-border-radius - 1));
-
-    > thead:first-child,
-    > tbody:first-child {
-      > tr:first-child {
-        border-top-left-radius: (@panel-border-radius - 1);
-        border-top-right-radius: (@panel-border-radius - 1);
-
-        td:first-child,
-        th:first-child {
-          border-top-left-radius: (@panel-border-radius - 1);
-        }
-        td:last-child,
-        th:last-child {
-          border-top-right-radius: (@panel-border-radius - 1);
-        }
-      }
-    }
-  }
+  // > .table:first-child,
+  // > .table-responsive:first-child > .table:first-child {
+  //   .border-top-radius((@panel-border-radius - 1));
+  //
+  //   > thead:first-child,
+  //   > tbody:first-child {
+  //     > tr:first-child {
+  //       border-top-left-radius: (@panel-border-radius - 1);
+  //       border-top-right-radius: (@panel-border-radius - 1);
+  //
+  //       td:first-child,
+  //       th:first-child {
+  //         border-top-left-radius: (@panel-border-radius - 1);
+  //       }
+  //       td:last-child,
+  //       th:last-child {
+  //         border-top-right-radius: (@panel-border-radius - 1);
+  //       }
+  //     }
+  //   }
+  // }
   // Add border bottom radius for last one
-  > .table:last-child,
-  > .table-responsive:last-child > .table:last-child {
-    .border-bottom-radius((@panel-border-radius - 1));
-
-    > tbody:last-child,
-    > tfoot:last-child {
-      > tr:last-child {
-        border-bottom-left-radius: (@panel-border-radius - 1);
-        border-bottom-right-radius: (@panel-border-radius - 1);
-
-        td:first-child,
-        th:first-child {
-          border-bottom-left-radius: (@panel-border-radius - 1);
-        }
-        td:last-child,
-        th:last-child {
-          border-bottom-right-radius: (@panel-border-radius - 1);
-        }
-      }
-    }
-  }
+  // > .table:last-child,
+  // > .table-responsive:last-child > .table:last-child {
+  //   .border-bottom-radius((@panel-border-radius - 1));
+  //
+  //   > tbody:last-child,
+  //   > tfoot:last-child {
+  //     > tr:last-child {
+  //       border-bottom-left-radius: (@panel-border-radius - 1);
+  //       border-bottom-right-radius: (@panel-border-radius - 1);
+  //
+  //       td:first-child,
+  //       th:first-child {
+  //         border-bottom-left-radius: (@panel-border-radius - 1);
+  //       }
+  //       td:last-child,
+  //       th:last-child {
+  //         border-bottom-right-radius: (@panel-border-radius - 1);
+  //       }
+  //     }
+  //   }
+  // }
   > .panel-body + .table,
   > .panel-body + .table-responsive,
   > .table + .panel-body,
