--- a/less/navbar.less
+++ b/less/navbar.less
@@ -82,7 +82,7 @@
       }
       > a {
         &:hover {
-          background-color: @gray-lighter;
+          text-decoration: underline;
         }
       }
     }
