--- a/less/type.less
+++ b/less/type.less
@@ -44,7 +44,10 @@ h6, .h6 {
   }
 }
 
-h1, .h1 { font-size: @font-size-h1; }
+h1, .h1 {
+  font-size: @font-size-h1;
+  margin-top: 0;
+ }
 h2, .h2 { font-size: @font-size-h2; }
 h3, .h3 { font-size: @font-size-h3; }
 h4, .h4 { font-size: @font-size-h4; }
