--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -1,20 +1,20 @@
-<!-- Left menu
-================================================== -->
-
+<!-- Left menu -->
 <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
-<div class="ku-navbar-header">
-  Kommunikation
-</div>
-<ul id="leftmenu" class="nav">
-  <li><a href="#">Forside</a></li>
-  <li><a href="#">Sub menu here</a>
-    <ul>
-      <li><a href="#">Link 2.1</a></li>
-      <li><a href="#">Link 2.2</a></li>
-      <li><a href="#">Link 2.3</a></li>
-    </ul>
-  </li>
-  <li><a href="#">Separated link</a>
+  <div class="ku-navbar-header">
+    Kommunikation
+  </div>
+  <ul id="leftmenu" class="nav">
+    <li><a href="#">Forside</a></li>
+    <li><a href="../ku-default/">Template with left menu</a></li>
+    <li><a href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
+    <li><a href="../ku-with-slideshow/">Template with left menu and slideshow</a></li>
+    <li><a href="#">Sub menu here</a>
+      <ul>
+        <li><a href="#">Link 2.1</a></li>
+        <li><a href="#">Link 2.2</a></li>
+        <li><a href="#">Link 2.3</a></li>
+      </ul>
+    </li>
     <li><a href="#">Separated link</a>
       <ul>
         <li><a href="#">Link 2.1</a>
@@ -34,11 +34,11 @@
     </li>
     <li><a href="#">One more very, very, very, long separated link</a></li>
     <li><a href="#">One more separated link</a></li>
-</ul>
-<hr class="menu-seperator">
-<ul id="leftmenu_2" class="nav">
-  <li><a href="#">Action</a></li>
-  <li><a href="#">Separated link</a></li>
-  <li><a href="#">One more separated link</a></li>
-</ul>
+  </ul>
+  <hr class="menu-seperator">
+  <ul id="leftmenu_2" class="nav">
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Separated link</a></li>
+    <li><a href="#">One more separated link</a></li>
+  </ul>
 </div>
