--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -8,6 +8,7 @@
     <li><a href="../ku-default/">Template with left menu</a></li>
     <li><a href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
     <li><a href="../ku-with-slideshow/">Template with left menu and slideshow</a></li>
+    <li><a href="../ku-gridboxes/">Template with left menu and grid boxes</a></li>
     <li><a href="#">Sub menu here</a>
       <ul>
         <li><a href="#">Link 2.1</a></li>
