--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -1,8 +1,8 @@
 <header>
   <div class="navbar-inverse navbar-static-top ku-topbar" role="navigation">
-    <div class="container">
-      <a class="topbar-logo pull-left" href="/">
-          <!-- <img class="img-responsive" src="../../images/ku_topbar_dk.svg" alt="Københavns universitet"> -->
+    <div class="container relative">
+      <a class="topbar-logo" href="/">
+         <img class="img-responsive" src="../../images/ku_top_dk.svg" alt="Københavns universitet">
       </a>
         <a id="btn_left" href="#mobileleftmenu" class="navbar-toggle leftmenu-toggle" role="button">
           <span class="icon-bar"></span>
