--- a/less/navbar.less
+++ b/less/navbar.less
@@ -672,8 +672,10 @@
     top: 3px;
     bottom: 0;
     left: 50px;
+    width: 90%;
     @media (min-width: @screen-sm) {
         left: 20px;
+        width: 100%;
     }
     display: flex;
     align-items: center;
