--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -1619,11 +1619,11 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@panel-body-padding">@panel-body-padding</label>
-    <input class="form-control" id="input-@panel-body-padding" type="text" value="15px" data-var="@panel-body-padding"/>
+    <input class="form-control" id="input-@panel-body-padding" type="text" value="10px" data-var="@panel-body-padding"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@panel-heading-padding">@panel-heading-padding</label>
-    <input class="form-control" id="input-@panel-heading-padding" type="text" value="10px 15px" data-var="@panel-heading-padding"/>
+    <input class="form-control" id="input-@panel-heading-padding" type="text" value="10px 10px" data-var="@panel-heading-padding"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
@@ -1645,14 +1645,18 @@
     <input class="form-control" id="input-@panel-footer-bg" type="text" value="#f5f5f5" data-var="@panel-footer-bg"/>
   </div>
   <div class="col-xs-4">
+    <label for="input-@panel-default-header-text">@panel-default-header-text</label>
+    <input class="form-control" id="input-@panel-default-header-text" type="text" value="#5e5e5e" data-var="@panel-default-header-text"/>
+  </div>
+  <div class="col-xs-4">
     <label for="input-@panel-default-text">@panel-default-text</label>
     <input class="form-control" id="input-@panel-default-text" type="text" value="@gray-dark" data-var="@panel-default-text"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-default-border">@panel-default-border</label>
-    <input class="form-control" id="input-@panel-default-border" type="text" value="#ddd" data-var="@panel-default-border"/>
+    <input class="form-control" id="input-@panel-default-border" type="text" value="#d5d5d5" data-var="@panel-default-border"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-default-heading-bg">@panel-default-heading-bg</label>
     <input class="form-control" id="input-@panel-default-heading-bg" type="text" value="#f5f5f5" data-var="@panel-default-heading-bg"/>
@@ -1661,11 +1665,11 @@
     <label for="input-@panel-primary-text">@panel-primary-text</label>
     <input class="form-control" id="input-@panel-primary-text" type="text" value="#fff" data-var="@panel-primary-text"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-primary-border">@panel-primary-border</label>
     <input class="form-control" id="input-@panel-primary-border" type="text" value="@brand-primary" data-var="@panel-primary-border"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-primary-heading-bg">@panel-primary-heading-bg</label>
     <input class="form-control" id="input-@panel-primary-heading-bg" type="text" value="@brand-primary" data-var="@panel-primary-heading-bg"/>
@@ -1674,11 +1678,11 @@
     <label for="input-@panel-success-text">@panel-success-text</label>
     <input class="form-control" id="input-@panel-success-text" type="text" value="@state-success-text" data-var="@panel-success-text"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-success-border">@panel-success-border</label>
     <input class="form-control" id="input-@panel-success-border" type="text" value="@state-success-border" data-var="@panel-success-border"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-success-heading-bg">@panel-success-heading-bg</label>
     <input class="form-control" id="input-@panel-success-heading-bg" type="text" value="@state-success-bg" data-var="@panel-success-heading-bg"/>
@@ -1687,11 +1691,11 @@
     <label for="input-@panel-info-text">@panel-info-text</label>
     <input class="form-control" id="input-@panel-info-text" type="text" value="@state-info-text" data-var="@panel-info-text"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-info-border">@panel-info-border</label>
     <input class="form-control" id="input-@panel-info-border" type="text" value="@state-info-border" data-var="@panel-info-border"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-info-heading-bg">@panel-info-heading-bg</label>
     <input class="form-control" id="input-@panel-info-heading-bg" type="text" value="@state-info-bg" data-var="@panel-info-heading-bg"/>
@@ -1700,11 +1704,11 @@
     <label for="input-@panel-warning-text">@panel-warning-text</label>
     <input class="form-control" id="input-@panel-warning-text" type="text" value="@state-warning-text" data-var="@panel-warning-text"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-warning-border">@panel-warning-border</label>
     <input class="form-control" id="input-@panel-warning-border" type="text" value="@state-warning-border" data-var="@panel-warning-border"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-warning-heading-bg">@panel-warning-heading-bg</label>
     <input class="form-control" id="input-@panel-warning-heading-bg" type="text" value="@state-warning-bg" data-var="@panel-warning-heading-bg"/>
@@ -1713,11 +1717,11 @@
     <label for="input-@panel-danger-text">@panel-danger-text</label>
     <input class="form-control" id="input-@panel-danger-text" type="text" value="@state-danger-text" data-var="@panel-danger-text"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-danger-border">@panel-danger-border</label>
     <input class="form-control" id="input-@panel-danger-border" type="text" value="@state-danger-border" data-var="@panel-danger-border"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@panel-danger-heading-bg">@panel-danger-heading-bg</label>
     <input class="form-control" id="input-@panel-danger-heading-bg" type="text" value="@state-danger-bg" data-var="@panel-danger-heading-bg"/>
