--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -10,14 +10,14 @@
           <span class="icon-bar"></span>
           <span class="sr-only">Toggle navigation</span>
         </a>
-        <a id="btn_right" href="#navbar" class="navbar-toggle collapsed globalmenu-toggle" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
+        <!-- <a id="btn_right" href="#navbar" class="navbar-toggle collapsed globalmenu-toggle" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar top-bar"></span>
           <span class="icon-bar middle-bar"></span>
           <span class="icon-bar bottom-bar"></span>
-      </a>
+      </a> -->
       <div id="topbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
+        <ul id="topbar_menu" class="nav navbar-nav navbar-right">
           <li><a href="#">Kalender</a></li>
           <li><a href="#">Find vej</a></li>
           <li><a href="#">Telefonbog</a></li>
@@ -33,7 +33,7 @@
 <nav id="kunav" class="navbar navbar-default navbar-static-top ku-nav">
   <div class="container">
     <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
+      <ul id="navbar_menu" class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Uddannelser på KU</a>
           <ul class="dropdown-menu">
