--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -187,29 +187,35 @@
 </script>
 {% endif %}
 <!-- Mobile menu -->
+<script type="text/javascript" src="../../assets/js/mmenu/hammer.min.js"></script>
 <script type="text/javascript" src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script type="text/javascript">
   $(function() {
-    // The menu on the left
+    // Global and left menu merging
     var $leftmenu = $('#leftmenu');
     var $leftmenu2 = $('#leftmenu_2');
+    var $globalMenu = $('#topbar_menu');
+    var $globalMenu2 = $('#navbar_menu');
     var $mobimenu = $('#mobileleftmenu');
-    var $items;
-    var $items2;
+    var $items, $items2, $items3, $items4;
 
     if ($leftmenu) {
       $items = $leftmenu.clone();
     }
     if ($leftmenu2) {
-      $items2 = $leftmenu2.clone().prepend('<li class="mm-divider">&nbsp;</li>');
+      $items2 = $leftmenu2.clone();
     }
-    var $menuitems = $items.append($items2);
+    var $items3 = $globalMenu.clone();
+    var $items4 = $globalMenu2.clone().prepend('<li class="mm-divider">Global menu</li>');
+    var $menuitems = $items.append($items2).append($items4).append($items3);
     $mobimenu.append($menuitems);
 
     $mobimenu.mmenu({
       offCanvas: {
         position: 'left',
-        zposition: 'front'
+        zposition: 'front',
+        screenReader: true,
+        drag: true
       },
       navbars: [{
         position: 'top',
