--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -1,19 +1,15 @@
-<!-- Left menu -->
 <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
   <div class="ku-navbar-header">
     Kommunikation
   </div>
   <ul id="leftmenu" class="nav">
     <li><a href="#">Forside</a></li>
-    <li><a href="../ku-default/">Template with left menu</a></li>
-    <li><a href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
-    <li><a href="../ku-with-slideshow/">Template with left menu and slideshow</a></li>
-    <li><a href="../ku-gridboxes/">Template with left menu and grid boxes</a></li>
-    <li><a href="#">Sub menu here</a>
+    <li><a href="#">KU page templates</a>
       <ul>
-        <li><a href="#">Link 2.1</a></li>
-        <li><a href="#">Link 2.2</a></li>
-        <li><a href="#">Link 2.3</a></li>
+        <li><a href="../ku-default/">Template with left menu</a></li>
+        <li><a href="../ku-right-sidebar/">Template with left menu and right sidebar</a></li>
+        <li><a href="../ku-with-slideshow/">Template with left menu and slideshow</a></li>
+        <li><a href="../ku-gridboxes/">Template with left menu and grid boxes</a></li>
       </ul>
     </li>
     <li><a href="#">Separated link</a>
