--- a/docs/assets/css/mmenu/jquery.mmenu.css
+++ b/docs/assets/css/mmenu/jquery.mmenu.css
@@ -133,3 +133,15 @@ html.mm-opened.mm-dragging .mm-menu,html.mm-opened.mm-dragging .mm-slideout{-web
 .mm-navbar-content-4>*{width:25%}
 .mm-navbar-content-5>*{width:20%}
 .mm-navbar-content-6>*{width:16.67%}
+/*Panel shadow*/
+.mm-menu:after {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 120%;
+    position: absolute;
+    left: 100%;
+    top: -10%;
+    z-index: 99;
+    box-shadow: 0 0 10px rgba(0,0,0,.3);
+}
