--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -211,37 +211,44 @@
     margin-right: -5px;
   }
   // Burger menu animation
-  .navbar-toggle {
-    border: none;
-    background: transparent !important;
-    &:hover {
-      background: transparent !important;
-    }
-    .icon-bar {
-      width: 22px;
-      transition: all 0.2s;
-    }
-    .top-bar {
-      transform: rotate(45deg);
-      transform-origin: 10% 10%;
-    }
-    .middle-bar {
-      opacity: 0;
-    }
-    .bottom-bar {
-      transform: rotate(-45deg);
-      transform-origin: 10% 90%;
-    }
-    &.collapsed {
-      .top-bar {
-        transform: rotate(0);
-      }
-      .middle-bar {
-        opacity: 1;
-      }
-      .bottom-bar {
-        transform: rotate(0);
-      }
+  // .navbar-toggle {
+  //   border: none;
+  //   background: transparent !important;
+  //   &:hover {
+  //     background: transparent !important;
+  //   }
+  //   .icon-bar {
+  //     width: 22px;
+  //     transition: all 0.2s;
+  //   }
+  //   .top-bar {
+  //     transform: rotate(45deg);
+  //     transform-origin: 10% 10%;
+  //   }
+  //   .middle-bar {
+  //     opacity: 0;
+  //   }
+  //   .bottom-bar {
+  //     transform: rotate(-45deg);
+  //     transform-origin: 10% 90%;
+  //   }
+  //   &.collapsed {
+  //     .top-bar {
+  //       transform: rotate(0);
+  //     }
+  //     .middle-bar {
+  //       opacity: 1;
+  //     }
+  //     .bottom-bar {
+  //       transform: rotate(0);
+  //     }
+  //   }
+  // }
+  // Hide KU language switcher icons
+  &.dk,
+  &.eng {
+    > img {
+      display: none;
     }
   }
 }
