--- a/less/variables.less
+++ b/less/variables.less
@@ -752,8 +752,8 @@
 //##
 
 @panel-bg:                    #fff;
-@panel-body-padding:          15px;
-@panel-heading-padding:       10px 15px;
+@panel-body-padding:          10px;
+@panel-heading-padding:       10px 10px;
 @panel-footer-padding:        @panel-heading-padding;
 @panel-border-radius:         @border-radius-base;
 
@@ -761,8 +761,9 @@
 @panel-inner-border:          #ddd;
 @panel-footer-bg:             #f5f5f5;
 
+@panel-default-header-text:   #5e5e5e;
 @panel-default-text:          @gray-dark;
-@panel-default-border:        #ddd;
+@panel-default-border:        #d5d5d5;
 @panel-default-heading-bg:    #f5f5f5;
 
 @panel-primary-text:          #fff;
